# plai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
plai/core/: core_dialect.py  graph.py  location.py  module.py  node.py  pipeline.py  rewrite_pattern.py  runtime.py  type_notation.py
plai/dialect/: aten_dialect.py  numpy_dialect.py  plai_dialect.py  python_builtin_dialect.py  torch_dialect.py
plai/pipelines/: convertion_dialect_torch_to_plai.py  decompose_plai_addmm.py
plai/pl_torch_compiler/: aten_dialect.py  dummy_compiler.py  dump_compiler.py  plnn_compiler.py  torch_dialect.py  torch_to_plai_convertion.py
plai/plnn/: module.py  source_map.py
plai/runtime/: numpy_runtime.py  plai_numpy_backend_runtime.py  plai_numpy_runtime.py
tests/: test_compile_pipeline.py  test_torch.py  test_torch_compile.py  test_torch_compile_aot_backward.py  test_torch_compile_backward.py  test_torch_compile_mutiple_output.py  test_torch_compile_opt.py  test_torch_custom_compile.py  test_torch_custom_compiler.py
tests/module_pool/: simple_nn.py
