[tool.poetry]
name = "plai"
version = "0.1.0"
description = ""
authors = ["0x00-pl <0x00.pl@gmail.com>"]
readme = "README.md"
packages = [
    { include = "plai" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
torch = "^2.5.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
